# nyan

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac  copying.md  kevinfile
buildsystem/: CheckCompilerFeatures.cmake  doxygen.cmake
buildsystem/templates/: Doxyfile.in  nyanConfig.cmake.in
cmake/: nyanConfig.cmake.in
doc/: README.md  building.md  embedding.md  member_types.md  nyan.md  nyan_specification.md
extra/syntax_highlighting/: README.md
extra/syntax_highlighting/kate/: nyan.xml
libnyan/: .gitignore  CMakeLists.txt  Makefile.am  ast.cpp  ast.h  basic_type.cpp  basic_type.h  c3.cpp  c3.h  change_tracker.h  config.cpp  config.h  container.cpp  container.h  curve.h  database.cpp  database.h  error.cpp  error.h  file.cpp  file.h  flex_lexer.lpp  id_token.cpp  id_token.h  inheritance_change.cpp  lexer.cpp  lexer.h  location.cpp  location.h  member.cpp  member.h  member_info.cpp  meta_info.cpp  meta_info.h  namespace.cpp  namespace.h  namespace_finder.cpp  namespace_finder.h  nyan.cpp  nyan.h  (+91 more)
libnyan/curve/: curve.cpp  curve.h  keyframe_container.cpp  keyframe_container.h
libnyan/datastructure/: orderedset.cpp  orderedset.h
libnyan/value/: container.cpp  container.h  file.cpp  file.h  number.cpp  number.h  object.cpp  object.h  orderedset.cpp  orderedset.h  set.cpp  set.h  set_base.h  text.cpp  text.h  value.cpp  value.h  value_holder.cpp  value_holder.h  value_wrapper.cpp  value_wrapper.h
nyan/: .gitignore  CMakeLists.txt  Makefile.am  api_error.cpp  api_error.h  ast.cpp  ast.h  basic_type.cpp  basic_type.h  c3.cpp  c3.h  change_tracker.cpp  change_tracker.h  compiler.h  concept.cpp  concept.h  config.cpp  config.h  curve.cpp  curve.h  database.cpp  database.h  error.cpp  error.h  file.cpp  file.h  flex_lexer.lpp  id_token.cpp  id_token.h  inheritance_change.cpp  inheritance_change.h  lang_error.cpp  lang_error.h  lexer.h  location.cpp  location.h  member.cpp  member.h  member_info.cpp  member_info.h  (+93 more)
nyan/datastructure/: orderedset.cpp  orderedset.h
nyan/lexer/: .gitignore  bracket.cpp  bracket.h  flex.lpp  impl.cpp  impl.h  lexer.cpp  lexer.h
nyan/util/: flags.cpp  flags.h
nyan/value/: boolean.cpp  boolean.h  container.cpp  container.h  container_types.cpp  container_types.h  dict.cpp  dict.h  file.cpp  file.h  none.cpp  none.h  number.cpp  number.h  object.cpp  object.h  orderedset.cpp  orderedset.h  set.cpp  set.h  set_base.cpp  set_base.h  set_types.cpp  set_types.h  text.cpp  text.h  value.cpp  value.h  value_holder.cpp  value_holder.h
test/: diamond.nyan  imported.nyan  test.nyan
test/stuff/: file.nyan
